# wayland-demos

./: README.md
attach-two-surfaces/: compile.sh  main  main.c
communicate-two-windows/: compile.sh  first.c  second.c  share_data.txt
qt-example/: CMakeLists.txt  main.cpp  vlc_player.h
test_my_libvlc/: compile.sh  main.c
xdg-foreign/: .gitignore  compile.sh  exporter.c  importer.c  xdg-foreign-unstable-v1-client-protocol.h
